# faststream-monitoring

./: .gitignore  docker-compose.yaml  pyproject.toml
grafana/: grafana.ini
grafana/dashboards/: faststream.json
grafana/plugins/tdengine-datasource/: MANIFEST.txt  module.js  module.js.map  plugin.json
modin/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/exchange/order_service/: main.py
src/exchange/taostest/: main.py
