[project]
name = "modin_learn"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "liuzhao", email = "liuzhao@weili.com"},
]
dependencies = ["modin[dask]>=0.32.0", "bokeh>=3.6.1", "requests>=2.32.3", "aiohttp>=3.11.9"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
